modified:   .Xresources 	modified:   .config/i3/i3.config 	modified:   .tmux.conf 	modified:   .xinitrc 	modified:   .xprofile 	deleted:    .xprofile.d/urxvtd.sh 	deleted:    .xprofile.d/xss.sh

--- a/.config/i3/i3.config
+++ b/.config/i3/i3.config
@@ -96,14 +96,16 @@ for_window [instance="dropdown"] floating enable
 for_window [instance="dropdown"] resize set 900 700
 for_window [instance="dropdown"] move position center
 for_window [instance="dropdown"] move scratchpad
-exec --no-startup-id $term -depth 32 -bg [90]{background.alpha} -name dropdown -e tmux
+#exec --no-startup-id $term -depth 32 -bg [90]{background.alpha} -name dropdown -e tmux
+exec --no-startup-id $term -n dropdown -e tmux
 bindsym $mod+u [instance="dropdown"] scratchpad show; move position center; focus
 # python3
 for_window [instance="math"] floating enable
 for_window [instance="math"] resize set 800 300
 for_window [instance="math"] move position center
 for_window [instance="math"] move scratchpad
-exec --no-startup-id $term -depth 32 -bg [90]{background.alpha} -fn "xft:mono:pixelsize=24" -name math -e python3 -q
+#exec --no-startup-id $term -depth 32 -bg [90]{background.alpha} -fn "xft:mono:pixelsize=24" -name math -e python3 -q
+exec --no-startup-id $term -font "xft:mono:pixelsize=24" -n math -e python3 -q
 bindsym $mod+m [instance="math"] scratchpad show; move position center; focus
 
 ##~~~~~~ WORKSPACES ~~~~~~##
