--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,47 +5,23 @@
 # !! (UNDER CONSTRUCTION) !!
 #
 
-#~ Term ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+#source /usr/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf
+
+# tmux
 set-option -g default-terminal "tmux-256color"
-
-#~ Status bar ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
-
-# powerline
-source /usr/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf
-
-# color
 #set-option -g status-bg black
 #set-option -g status-fg blue
-
-# style
 #set-option -g status-right '#[fg=blue][#H]'
-
-# size
-#set -g status-left-length 20
-#set -g status-right-length 150
-
-#~ LockScreen ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
-
 set-option -g lock-command "cmatrix -absu 3 -C blue"
 set-option -g lock-after-time 0
-
-#~ Windows ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
-
-# active tab
-#set-window-option -g window-status-current-bg blue
-#set-window-option -g window-status-current-fg black
-
-# numbers & symbols
-#setw -g window-status-current-format '#{pane_current_command}'
-#setw -g window-status-format '#{pane_current_command}'
-
-#~ Settings ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
-
-# time
 set-option -g clock-mode-style 12
 set-option -g clock-mode-colour blue
 
-# misc
-#rename-session ">_"
+# tpm
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-themepack'
+set -g @plugin 'jimeh/tmux-themepack'
 
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+# tmux-themepack
+set -g @themepack 'powerline/block/blue'
